--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,6 +6,7 @@ ext.versions = [
         androidTestJunit            : '1.2.1',
         androidTestOrchestrator     : '1.5.0',
         androidTestRunner           : '1.6.2',
+        androidTestTruth            : '1.6.0',
         androidxActivity            : '1.8.2',
         androidxAnnotation          : '1.7.1',
         androidxAppcompat           : '1.6.1',
@@ -205,7 +206,7 @@ ext.testLibs = [
                 navigation : "androidx.navigation:navigation-testing:${versions.androidxNavigation}",
                 core       : "androidx.test:core:${versions.androidTest}",
                 coreKtx    : "androidx.test:core-ktx:${versions.androidTest}",
-                truth      : "androidx.test.ext:truth:${versions.androidTest}",
+                truth      : "androidx.test.ext:truth:${versions.androidTestTruth}",
                 uiAutomator: "androidx.test.uiautomator:uiautomator:${versions.uiAutomator}",
                 workManager: "androidx.work:work-testing:${versions.workManager}",
         ],
