--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,10 +2,11 @@ ext.versions = [
         accompanist                 : '0.32.0',
         alipay                      : '15.8.12',
         androidGradlePlugin         : '8.5.2',
-        androidTest                 : '1.5.0',
-        androidTestJunit            : '1.1.5',
-        androidTestOrchestrator     : '1.4.2',
-        androidTestRunner           : '1.5.2',
+        androidTest                 : '1.6.1',
+        androidTestJunit            : '1.2.1',
+        androidTestOrchestrator     : '1.5.0',
+        androidTestRunner           : '1.6.2',
+        androidTestTruth            : '1.6.0',
         androidxActivity            : '1.8.2',
         androidxAnnotation          : '1.7.1',
         androidxAppcompat           : '1.6.1',
@@ -62,7 +63,7 @@ ext.versions = [
         playServicesTfLite          : '16.0.1',
         playServicesWallet          : '19.3.0',
         retrofit                    : '2.9.0',
-        robolectric                 : '4.11.1',
+        robolectric                 : '4.13',
         shot                        : '6.1.0',
         showkase                    : '1.0.0-beta18',
         stripe3ds2                  : '6.1.8',
@@ -71,7 +72,7 @@ ext.versions = [
         testParameterInjector       : '1.12',
         truth                       : '1.1.3',
         turbine                     : '1.0.0',
-        uiAutomator                 : '2.2.0',
+        uiAutomator                 : '2.3.0',
         workManager                 : '2.9.0',
         zxing                       : '3.5.2',
 ]
@@ -205,7 +206,7 @@ ext.testLibs = [
                 navigation : "androidx.navigation:navigation-testing:${versions.androidxNavigation}",
                 core       : "androidx.test:core:${versions.androidTest}",
                 coreKtx    : "androidx.test:core-ktx:${versions.androidTest}",
-                truth      : "androidx.test.ext:truth:${versions.androidTest}",
+                truth      : "androidx.test.ext:truth:${versions.androidTestTruth}",
                 uiAutomator: "androidx.test.uiautomator:uiautomator:${versions.uiAutomator}",
                 workManager: "androidx.work:work-testing:${versions.workManager}",
         ],
