--- a/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
@@ -37,6 +37,8 @@ tags:
 - assertVisible: "Your accounts were connected."
 - tapOn:
     id: "done_button"
-- assertVisible: ".*Completed!.*"
+- scrollUntilVisible:
+    element:
+      text: ".*Completed!.*"
 - assertVisible: ".*StripeBank.*"
 - stopRecording
