--- a/maestro/financial-connections/Livemode-Data-Finbank.yaml
+++ b/maestro/financial-connections/Livemode-Data-Finbank.yaml
@@ -44,6 +44,10 @@ tags:
 - assertVisible: "Your accounts were connected."
 - tapOn:
     id: "done_button"
-- assertVisible: ".*Completed!.*"
-- assertVisible: ".*FinBank.*"
+- scrollUntilVisible:
+    element:
+      text: ".*Completed!.*"
+- scrollUntilVisible:
+    element:
+      text: ".*FinBank.*"
 - stopRecording
