--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ android.experimental.androidTest.numManagedDeviceShards=3
 
 # Update StripeSdkVersion.VERSION_NAME when publishing a new release
 VERSION_NAME=20.51.1
+
+# REMOVE, just for
+#org.gradle.parallel=true
+#org.gradle.jvmargs=-Xms3g -Xmx6g -XX:+UseParallelGC -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
