--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ android.experimental.androidTest.numManagedDeviceShards=3
 VERSION_NAME=20.51.1
 
 # REMOVE, just for
-#org.gradle.parallel=true
-#org.gradle.jvmargs=-Xms3g -Xmx6g -XX:+UseParallelGC -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xms3g -Xmx6g -XX:+UseParallelGC -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
