--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -57,7 +57,7 @@ jobs:
           pattern: paymentsheet-example-release-*.apk
       - name: diffuse
         id: diffuse
-        uses: usefulness/diffuse-action@v0.11.0
+        uses: usefulness/diffuse-action@41995fe8ff6be0a8847e63bdc5a4679c704b455c
         with:
           old-file-path: apk/paymentsheet-example-release-master.apk
           new-file-path: apk/paymentsheet-example-release-pr.apk
