--- a/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-InstantDebits.yaml
+++ b/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-InstantDebits.yaml
@@ -28,7 +28,7 @@ tags:
 - inputText: "6223115555"
 - tapOn: "Continue with Link"
 # Select bank
-- tapOn: "Test Institution"
+- tapOn: "Payment Success"
 # Bypass Chrome on-boarding screen
 - runFlow:
     file: ../common/subflow-skip-chrome-welcome.yaml
